feat: add game UI image and remove 5-game limit

--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
-<body>
-    
 
+<body>
+    <h1>AI</h1>
+    <div id="robot-choices">
+        <div class="robot"><img src="/game-images/rock.png" alt="a cartoonish color blue icon of a rock hand gesture"></div>
+        <div class="robot"><img src="/game-images/paper.png" alt="a cartoonish color blue icon of a paper hand gesture"></div>
+        <div class="robot"><img src="/game-images/scissor.png" alt="a cartoonish color blue icon of a rock hand gesture"></div>
+    </div>
+    <h1>You</h1>
+    <div>
+        <button id="rock" class="buttons" type="button"><img src="/game-images/rock.png" alt="a cartoonish color blue icon of a rock hand gesture"></button>
+        <button id="paper" class="buttons" type="button"><img src="/game-images/paper.png" alt="a cartoonish color blue icon of a paper hand gesture"></button>
+        <button id="scissors" class="buttons" type="button"><img src="/game-images/scissor.png" alt="a cartoonish color blue icon of a rock hand gesture"></button>
+    </div>
+    <p>lets play a game! pick your choice.</p>
 
 
 
@@ -15,7 +29,8 @@
 
 
     <script src="script.js">
-        
+
     </script>
 </body>
+
 </html>
