Enhance UI design and alignment for better layout

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 <body>
         <header>
                 <h1>Let's Play Rock Paper Scissors!</h1>
+                <p id="counter">Scores:</p>
         </header>
         <div id="robot-choices">
                 <h1 class="players top">AI</h1>
-                <div>
+                <div id="robot-container">
                         <div class="robot"><img src="/game-images/rock.png"
                                         alt="a cartoonish color blue icon of a rock hand gesture">
                         </div>
