push to to fix on main computer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
         <header>
-                <h1>Let's Play Rock Paper Scissors!</h1>
+                <h1 id="content">Let's Play Rock Paper Scissors!</h1>
                 <p id="counter">Scores:</p>
         </header>
         <div id="robot-choices">
@@ -30,14 +30,19 @@
         <p id="versus">VS</p>
 
         <div id="human-choices">
-                <h1 class="players bottom">You</h1>
+                <h1 class="players bottom">Your Pick</h1>
                 <div id="button-container">
-                        <button id="rock" class="buttons" type="button"><img src="/game-images/rock.png"
-                                        alt="a cartoonish color blue icon of a rock hand gesture"></button>
-                        <button id="paper" class="buttons" type="button"><img src="/game-images/paper.png"
-                                        alt="a cartoonish color blue icon of a paper hand gesture"></button>
+                        <button id="rock" class="buttons" type="button">
+                                <img src="/game-images/rock.png"
+                                        alt="a cartoonish color blue icon of a rock hand gesture">
+                        </button>
+                        <button id="paper" class="buttons" type="button">
+                                <img src="/game-images/paper.png"
+                                        alt="a cartoonish color blue icon of a paper hand gesture">
+                        </button>
                         <button id="scissors" class="buttons" type="button"><img src="/game-images/scissor.png"
-                                        alt="a cartoonish color blue icon of a rock hand gesture"></button>
+                                        alt="a cartoonish color blue icon of a rock hand gesture">
+                        </button>
                 </div>
         </div>
 
