create a function to hide unselected buttons

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <div id="robot-choices">
                 <h1 class="players top">AI</h1>
                 <div id="robot-container">
-                        <div class="robot"><img src="/game-images/rock.png"
+                        <div id="robot-rock" class="robot"><img src="/game-images/rock.png"
                                         alt="a cartoonish color blue icon of a rock hand gesture">
                         </div>
-                        <div class="robot"><img src="/game-images/paper.png"
+                        <div id="robot-paper" class="robot"><img src="/game-images/paper.png"
                                         alt="a cartoonish color blue icon of a paper hand gesture">
                         </div>
-                        <div class="robot"><img src="/game-images/scissor.png"
+                        <div id="robot-scissors" class="robot"><img src="/game-images/scissor.png"
                                         alt="a cartoonish color blue icon of a rock hand gesture"></div>
                 </div>
         </div>
