feat: add score tracking feature

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
         <header>
                 <h1 id="content">Let's Play Rock Paper Scissors!</h1>
-                <p id="counter">Scores:</p>
+                <p id="counter"></p>
         </header>
         <div id="robot-choices">
                 <h1 class="players top">AI</h1>
