Fix buttons click bug after round ends

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <p id="counter"></p>
         </header>
         <div id="robot-choices">
-                <h1 class="players top">AI</h1>
+                <h1 class="players top">Computer</h1>
                 <div id="robot-container">
                         <div id="robot-rock" class="robot btn"><img src="/game-images/rock.png"
                                         alt="a cartoonish color blue icon of a rock hand gesture">
