--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <div id="robot-choices">
                 <h1 class="players top">Computer</h1>
                 <div id="robot-container">
-                        <div id="robot-rock" class="robot btn"><img src="/game-images/rock.png"
+                        <div id="robot-rock" class="robot btn"><img src="game-images/rock.png"
                                         alt="a cartoonish color blue icon of a rock hand gesture">
                         </div>
-                        <div id="robot-paper" class="robot btn"><img src="/game-images/paper.png"
+                        <div id="robot-paper" class="robot btn"><img src="game-images/paper.png"
                                         alt="a cartoonish color blue icon of a paper hand gesture">
                         </div>
-                        <div id="robot-scissors" class="robot btn"><img src="/game-images/scissor.png"
+                        <div id="robot-scissors" class="robot btn"><img src="game-images/scissor.png"
                                         alt="a cartoonish color blue icon of a rock hand gesture"></div>
                 </div>
         </div>
@@ -33,14 +33,14 @@
                 <button id="restart" type="button" class="players bottom"></button>
                 <div id="button-container">
                         <button id="rock" class="buttons btn" type="button">
-                                <img src="/game-images/rock.png"
+                                <img src="game-images/rock.png"
                                         alt="a cartoonish color blue icon of a rock hand gesture">
                         </button>
                         <button id="paper" class="buttons btn" type="button">
-                                <img src="/game-images/paper.png"
+                                <img src="game-images/paper.png"
                                         alt="a cartoonish color blue icon of a paper hand gesture">
                         </button>
-                        <button id="scissors" class="buttons btn" type="button"><img src="/game-images/scissor.png"
+                        <button id="scissors" class="buttons btn" type="button"><img src="game-images/scissor.png"
                                         alt="a cartoonish color blue icon of a rock hand gesture">
                         </button>
                 </div>
